--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}") {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     jooqGenerator 'mysql:mysql-connector-java:8.0.11'
@@ -142,8 +142,7 @@ jooq {
                     }
                     target {
                         packageName = 'com.example.demo.jooq'
-                        //directory = 'build/generated/sources/annotationProcessor/java/main'
-                        directory = 'src/main/java'
+                        directory = 'build/generated/sources/annotationProcessor/java/main'
                     }
                 }
             }
