[代码完善](master): springboot升级修改jooq代码生成方式

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,8 @@ lombokVersion=1.18.24
 mapStructVersion=1.2.0.Final
 commonsLang3Version=3.8.1
 springBootVersion=2.7.7
-jooqVersion=3.17.7
+jooqVersion=3.17.8
+swaggerVersion=2.9.2
+swaggerUiVersion=1.9.6
+h2Version=1.4.200
+springVersion=5.3.20
