--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,14 @@ dependencies {
     implementation "org.springframework:spring-context:${springVersion}"
     implementation "org.springframework:spring-jdbc:${springVersion}"
 
+    //implementation "org.springframework.data:spring-data-commons:${springBootVersion}"
+
     implementation 'mysql:mysql-connector-java:8.0.11'
-    implementation 'org.projectlombok:lombok:1.16.18'
+    implementation "org.projectlombok:lombok:${lombokVersion}"
     implementation 'com.alibaba:druid:1.1.3'
+
+
+    implementation "org.apache.commons:commons-collections4:${commonsCollections4Version}"
 
     implementation("io.springfox:springfox-swagger2:${swaggerVersion}") {
         exclude group: "com.google.guava", module: "guava"
@@ -63,13 +68,13 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.10.0'
     implementation 'org.slf4j:jul-to-slf4j:1.7.25'
-    implementation "org.apache.commons:commons-lang3:${project.commonsLang3Version}"
+    implementation "org.apache.commons:commons-lang3:${commonsLang3Version}"
 
-    compileOnly "org.projectlombok:lombok:${project.lombokVersion}"
-    annotationProcessor "org.projectlombok:lombok:${project.lombokVersion}"
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    compileOnly "org.mapstruct:mapstruct:${project.mapStructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${project.mapStructVersion}"
+    compileOnly "org.mapstruct:mapstruct:${mapStructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
     compileOnly "org.jooq:jooq-codegen:${jooqVersion}"
 
 
@@ -117,12 +122,6 @@ jooq {
     configurations {
         main {
             generationTool {
-                /*         jdbc {
-                             driver = 'org.h2.Driver'
-                             url = 'jdbc:h2:~/jooq-demo'
-                             user = 'sa'
-                             password = ''
-                         }*/
                 generator {
                     name = 'org.jooq.codegen.DefaultGenerator'
                     strategy {
@@ -166,6 +165,7 @@ jooq {
                         pojos = true
                         daos = true
                         springAnnotations = true
+                        springDao = true
                         javaTimeTypes = true
                     }
                     target {
@@ -187,19 +187,4 @@ tasks.named('generateJooq').configure {
     }
 }
 
-
-/* tasks.generateSampleJooqSchemaSource.with {
-     def out = new ByteArrayOutputStream()
-     javaExecSpec = { JavaExecSpec s ->
-         s.standardOutput = out
-         s.errorOutput = out
-         s.ignoreExitValue = true
-         s.jvmArgs '-Xmx512M'
-     }
-     execResultHandler = { ExecResult r ->
-         if (r.exitValue != 0) {
-             throw new RuntimeException('jOOQ source code generation failed:\n\n' + out.toString())
-         }
-     }
- }*/
 
