--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 lombokVersion=1.18.24
-mapStructVersion=1.2.0.Final
+mapStructVersion=1.5.3.Final
 commonsLang3Version=3.8.1
 springBootVersion=2.7.7
 jooqVersion=3.17.8
@@ -7,3 +7,4 @@ swaggerVersion=2.9.2
 swaggerUiVersion=1.9.6
 h2Version=1.4.200
 springVersion=5.3.20
+commonsCollections4Version=4.2
