--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
+    implementation ("org.springframework.boot:spring-boot-starter-jooq:${springBootVersion}"){
+        exclude group: "org.jooq", module: "jooq"
+    }
+
 
     implementation "org.springframework:spring-tx:${springVersion}"
     implementation "org.springframework:spring-context:${springVersion}"
@@ -63,7 +67,6 @@ dependencies {
     implementation "com.github.xiaoymin:swagger-bootstrap-ui:${swaggerUiVersion}"
 
     implementation "org.jooq:jooq:${jooqVersion}"
-    implementation "org.jooq:jooq-meta:${jooqVersion}"
 
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.10.0'
