--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
-    implementation ("org.springframework.boot:spring-boot-starter-jooq:${springBootVersion}"){
-        exclude group: "org.jooq", module: "jooq"
-    }
+    //implementation "org.jooq:jooq:${jooqVersion}"
+    implementation ("org.springframework.boot:spring-boot-starter-jooq:${springBootVersion}")
 
 
     implementation "org.springframework:spring-tx:${springVersion}"
@@ -66,7 +65,7 @@ dependencies {
     implementation "io.springfox:springfox-swagger-ui:${swaggerVersion}"
     implementation "com.github.xiaoymin:swagger-bootstrap-ui:${swaggerUiVersion}"
 
-    implementation "org.jooq:jooq:${jooqVersion}"
+
 
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.10.0'
@@ -115,7 +114,6 @@ sourceSets {
         }
     }
 }
-
 
 test {
     useJUnitPlatform()
