[代码完善](master): springboot升级修改jooq代码生成方式

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ dependencies {
 
     compileOnly "org.mapstruct:mapstruct:${mapStructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
-    compileOnly "org.jooq:jooq-codegen:${jooqVersion}"
+    //compileOnly "org.jooq:jooq-codegen:${jooqVersion}"
 
 
     compileOnly 'org.projectlombok:lombok'
