[代码完善](master): springboot升级修改jooq代码生成方式

--- a/build.gradle
+++ b/build.gradle
@@ -135,7 +135,7 @@ jooq {
                         properties {
                             property {
                                 key = 'scripts'
-                                value = 'src/main/resources/sql/database.sql'
+                                value = 'sql/database.sql'
                             }
                             property {
                                 key = 'sort'
