--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,9 @@ dependencies {
     implementation ("org.springframework.boot:spring-boot-starter-jooq:${springBootVersion}")
 
 
-    implementation "org.springframework:spring-tx:${springVersion}"
-    implementation "org.springframework:spring-context:${springVersion}"
-    implementation "org.springframework:spring-jdbc:${springVersion}"
+//    implementation "org.springframework:spring-tx:${springVersion}"
+//    implementation "org.springframework:spring-context:${springVersion}"
+//    implementation "org.springframework:spring-jdbc:${springVersion}"
 
     //implementation "org.springframework.data:spring-data-commons:${springBootVersion}"
 
